--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,34 @@
 body{
-    background-image: url("../images/computer-image.jpeg");
+    /* background-image: url("../images/coding-cartoon-image.jpeg"); */
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-color: blue;
 }
 .section-1, .section-2, .section-3, .section-4{
-    height: 20vh;
+    height: 40vh;
     margin-left: 20px;
     margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     padding: 20px;
 }
 .section-1, .section-3{
     background-color: whitesmoke;
     height: 20vh;
+    background-image: url("../images/coding-cartoon-image.jpeg");
 }
 .section-2, .section-4{
     background-color: grey;
 }
-#section-1>h1{
-    font-style: italic;
+#section-1{
+    font-style: inherit;
     font-size: medium;
     text-align: center;
-    color: hotpink;
+    color: black;
 }
 .section-1{
-    height: 20vh;
+    height: 30vh;
 }
 div.intro{
     display: flex;
@@ -49,3 +53,11 @@ div.intro{
     border: 1px solid black;
     padding: 10px;
 }
+/* .section-1{
+    background-image: url(../images/computer-image.jpeg);
+} */
+/* h1{
+    font-size: 200%;
+    text-shadow: black;
+    margin-bottom: 50px;
+} */
