--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body{
     margin-right: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 20px;
+    text-align-last: center;
 }
 .section-1, .section-3{
     background-color: whitesmoke;
@@ -38,8 +38,9 @@ div.intro{
     float: right;
     padding-left: 50px;
 }
-.c-blue{
-    color: blue;
+.c-black{
+    color: black;
+    text-align: center;
 }
 .section-4{
     height: 50vh;
